@@ -456,6 +456,8 @@ Localization
         #LOC_BDArmory_GuidanceType = Guidance Type\u0020
         #LOC_BDArmory_TargetingMode = Targeting Mode\u0020
         #LOC_BDArmory_ActiveRadarRange = Active Radar Range
+        #LOC_BDArmory_MissileCMRange = Countermeasure Range
+        #LOC_BDArmory_MissileCMInterval = Countermeasure Interval
 
         // Adjustable Rails
             #LOC_BDArmory_Rails = Rails 
